crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__e2e_flow_tests__tool_call_lifecycle__e2e_tool_error.snap
---
source: crates/crucible-cli/src/tui/testing/e2e_flow_tests.rs
expression: h.render()
---
 > Hello                                                                        
                                                                                
 ● Hi! How can I help?                                                          
                                                                                
 ✗ read_file → Permission denied: /etc/shadow                                   
                                                                                
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
