crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__e2e_flow_tests__tool_call_lifecycle__e2e_tool_step3_multi.snap
---
source: crates/crucible-cli/src/tui/testing/e2e_flow_tests.rs
expression: h.render()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 > Hello                                                                        
                                                                                
 ● Hi! How can I help?                                                          
                                                                                
 ● glob(pattern="**/*.rs") → Found 15 files                                     
 ● read_file(path="src/main.rs") → fn main() { ... }                            
 ✗ grep(pattern="[invalid") → Invalid regex pattern                             
                                                                                
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
